# trino-gsheets

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt  script.ipynb
