[project]
name = "trino-gsheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "trino>=0.328.0",
]
